gdk-includes/include/gdk/gdk.h

/** A server session */
struct GA_session;
/** A Parsed JSON object */
typedef struct GA_json GA_json;
/** An api method call that potentially requires two factor authentication to complete */
struct GA_auth_handler;
/**
 * Get a page of addresses previously generated for a subaccount.
 *
 * :param session: The session to use.
 * :param details: :ref:`previous-addresses-request` detailing the previous addresses to fetch.
 * :param call: Destination for the resulting GA_auth_handler to complete the action.
 *|     The call handlers result is :ref:`previous-addresses`.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``details`` will be emptied when the call completes.
 *
 * .. note:: Iteration of all addresses is complete when 'last_pointer' is not
 *|     present in the results.
 */
GDK_API int GA_get_previous_addresses(struct GA_session* session, GA_json* details, struct GA_auth_handler** call);
/**
 * Get the user's unspent transaction outputs.
 *
 * :param session: The session to use.
 * :param details: :ref:`unspent-outputs-request` detailing the unspent transaction outputs to fetch.
 * :param call: Destination for the resulting GA_auth_handler to complete the action.
 *|     The call handlers result is :ref:`unspent-outputs`.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``details`` will be emptied when the call completes.
 */
GDK_API int GA_get_unspent_outputs(struct GA_session* session, GA_json* details, struct GA_auth_handler** call);
/**
 * Get the unspent transaction outputs associated with a non-wallet private key.
 *
 * :param session: The session to use.
 * :param details: :ref:`unspent-outputs-private-request` detailing the private key to check.
 * :param call: Destination for the resulting GA_auth_handler to complete the action.
 *|     The call handlers result is :ref:`unspent-outputs`.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: Neither the private key or its derived public key are sent to any third party for this call.
 */
GDK_API int GA_get_unspent_outputs_for_private_key(
    struct GA_session* session, GA_json* details, struct GA_auth_handler** call);
/**
 * Change the status of a user's unspent transaction outputs.
 *
 * :param session: The session to use.
 * :param details: :ref:`unspent-outputs-status` detailing the unspent transaction outputs status to set.
 * :param call: Destination for the resulting GA_auth_handler to complete the action.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``details`` will be emptied when the call completes.
 */
GDK_API int GA_set_unspent_outputs_status(struct GA_session* session, GA_json* details, struct GA_auth_handler** call);
/**
 * Get a transaction's details.
 *
 * :param session: The session to use.
 * :param txhash_hex: The transaction hash of the transaction to fetch.
 * :param transaction: Destination for the :ref:`external-tx-detail`.
 *|     Returned GA_json should be freed using `GA_destroy_json`.
 */
GDK_API int GA_get_transaction_details(struct GA_session* session, const char* txhash_hex, GA_json** transaction);
/**
 * Get the sum of unspent outputs paying to a subaccount.
 *
 * :param session: The session to use.
 * :param details: :ref:`unspent-outputs-request` detailing the unspent transaction outputs to
 *|    compute the balance from.
 * :param call: Destination for the resulting GA_auth_handler to complete the action.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``details`` will be emptied when the call completes.
 */
GDK_API int GA_get_balance(struct GA_session* session, GA_json* details, struct GA_auth_handler** call);
/**
 * Get the list of allowed currencies for all available pricing sources.
 *
 * :param session: The session to use.
 * :param currencies: The returned list of :ref:`currencies`.
 *|     Returned GA_json should be freed using `GA_destroy_json`.
 */
GDK_API int GA_get_available_currencies(struct GA_session* session, GA_json** currencies);
/**
 * Convert Fiat to BTC and vice-versa.
 *
 * :param session: The session to use.
 * :param value_details: :ref:`convert-amount` giving the value to convert.
 * :param output: Destination for the converted values :ref:`amount-data`.
 *|     Returned GA_json should be freed using `GA_destroy_json`.
 */
GDK_API int GA_convert_amount(struct GA_session* session, const GA_json* value_details, GA_json** output);
/**
 * Encrypt JSON with a server provided key protected by a PIN.
 *
 * :param session: The session to use.
 * :param details: The :ref:`encrypt-with-pin-details` to encrypt.
 * :param call: Destination for the resulting GA_auth_handler to complete the action.
 *|     The call handlers result is :ref:`encrypt-with-pin-result` which the caller should persist.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``details`` will be emptied when the call completes.
 */
GDK_API int GA_encrypt_with_pin(struct GA_session* session, GA_json* details, struct GA_auth_handler** call);
/**
 * Disable all PIN logins previously set.
 *
 * After calling this method, the user will not be able to login with PIN
 *| from any device that was previously enabled using `GA_encrypt_with_pin`.
 *
 * :param session: The session to use.
 */
GDK_API int GA_disable_all_pin_logins(struct GA_session* session);
/**
 * Construct a transaction.
 *
 * :param session: The session to use.
 * :param transaction_details: The :ref:`create-tx-details` for constructing.
 * :param call: Destination for the resulting GA_auth_handler to complete the action.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``transaction_details`` will be emptied when the call completes.
 */
GDK_API int GA_create_transaction(
    struct GA_session* session, GA_json* transaction_details, struct GA_auth_handler** call);
/**
 * Sign the user's inputs to a transaction.
 *
 * :param session: The session to use.
 * :param transaction_details: The :ref:`sign-tx-details` for signing, as previously
 *|     returned from `GA_create_transaction` or (for Liquid) `GA_blind_transaction`.
 * :param call: Destination for the resulting GA_auth_handler to perform the signing.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``transaction_details`` will be emptied when the call completes.
 */
GDK_API int GA_sign_transaction(
    struct GA_session* session, GA_json* transaction_details, struct GA_auth_handler** call);
/**
 * Sign one or more of a user's inputs in a PSBT or PSET.
 *
 * :param session: The session to use.
 * :param details: The :ref:`sign-psbt-details` for signing.
 * :param call: Destination for the resulting GA_auth_handler to perform the signing.
 *|     The call handlers result is :ref:`sign-psbt-result`.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``details`` will be emptied when the call completes.
 *
 * .. note:: EXPERIMENTAL warning: this call may be changed in future releases.
 */
GDK_API int GA_psbt_sign(struct GA_session* session, GA_json* details, struct GA_auth_handler** call);
/**
 * Free a GA_json object.
 *
 * :param json: GA_json object to free.
 */
GDK_API int GA_destroy_json(GA_json* json);
/**
 * Free an auth_handler after use.
 *
 * :param call: The auth_handler to free.
 */
GDK_API int GA_destroy_auth_handler(struct GA_auth_handler* call);