lib/ffi/generated_bindings.dart


  /// Get a page of addresses previously generated for a subaccount.
  ///
  /// :param session: The session to use.
  /// :param details: :ref:`previous-addresses-request` detailing the previous addresses to fetch.
  /// :param call: Destination for the resulting GA_auth_handler to complete the action.
  /// |     The call handlers result is :ref:`previous-addresses`.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  ///
  /// .. note:: Iteration of all addresses is complete when 'last_pointer' is not
  /// |     present in the results.
  int GA_get_previous_addresses(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_get_previous_addresses(
      session,
      details,
      call,
    );
  }

  late final _GA_get_previous_addressesPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_previous_addresses>>(
          'GA_get_previous_addresses');
  late final _GA_get_previous_addresses =
      _GA_get_previous_addressesPtr.asFunction<DartGA_get_previous_addresses>();

  /// Get the user's unspent transaction outputs.
  ///
  /// :param session: The session to use.
  /// :param details: :ref:`unspent-outputs-request` detailing the unspent transaction outputs to fetch.
  /// :param call: Destination for the resulting GA_auth_handler to complete the action.
  /// |     The call handlers result is :ref:`unspent-outputs`.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_get_unspent_outputs(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_get_unspent_outputs(
      session,
      details,
      call,
    );
  }

  late final _GA_get_unspent_outputsPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_unspent_outputs>>(
          'GA_get_unspent_outputs');
  late final _GA_get_unspent_outputs =
      _GA_get_unspent_outputsPtr.asFunction<DartGA_get_unspent_outputs>();

  /// Get the unspent transaction outputs associated with a non-wallet private key.
  ///
  /// :param session: The session to use.
  /// :param key: The private key in WIF or BIP 38 format.
  /// :param password: The password the key is encrypted with, if any.
  /// :param unused: unused, must be 0
  /// :param utxos: Destination for the returned utxos (same format as :ref:`tx-list`).
  /// |     Returned GA_json should be freed using `GA_destroy_json`.
  ///
  /// .. note:: Neither the private key or its derived public key are transmitted.
  int GA_get_unspent_outputs_for_private_key(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Char> private_key,
    ffi.Pointer<ffi.Char> password,
    int unused,
    ffi.Pointer<ffi.Pointer<GA_json>> utxos,
  ) {
    return _GA_get_unspent_outputs_for_private_key(
      session,
      private_key,
      password,
      unused,
      utxos,
    );
  }

  late final _GA_get_unspent_outputs_for_private_keyPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_unspent_outputs_for_private_key>>(
          'GA_get_unspent_outputs_for_private_key');
  late final _GA_get_unspent_outputs_for_private_key =
      _GA_get_unspent_outputs_for_private_keyPtr.asFunction<
          DartGA_get_unspent_outputs_for_private_key>();

  /// Change the status of a user's unspent transaction outputs.
  ///
  /// :param session: The session to use.
  /// :param details: :ref:`unspent-outputs-status` detailing the unspent transaction outputs status to set.
  /// :param call: Destination for the resulting GA_auth_handler to complete the action.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_set_unspent_outputs_status(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_set_unspent_outputs_status(
      session,
      details,
      call,
    );
  }

  late final _GA_set_unspent_outputs_statusPtr =
      _lookup<ffi.NativeFunction<NativeGA_set_unspent_outputs_status>>(
          'GA_set_unspent_outputs_status');
  late final _GA_set_unspent_outputs_status = _GA_set_unspent_outputs_statusPtr
      .asFunction<DartGA_set_unspent_outputs_status>();

  /// Get a transaction's details.
  ///
  /// :param session: The session to use.
  /// :param txhash_hex: The transaction hash of the transaction to fetch.
  /// :param transaction: Destination for the :ref:`external-tx-detail`.
  /// |     Returned GA_json should be freed using `GA_destroy_json`.
  int GA_get_transaction_details(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Char> txhash_hex,
    ffi.Pointer<ffi.Pointer<GA_json>> transaction,
  ) {
    return _GA_get_transaction_details(
      session,
      txhash_hex,
      transaction,
    );
  }

  late final _GA_get_transaction_detailsPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_transaction_details>>(
          'GA_get_transaction_details');
  late final _GA_get_transaction_details = _GA_get_transaction_detailsPtr
      .asFunction<DartGA_get_transaction_details>();

  /// Get the sum of unspent outputs paying to a subaccount.
  ///
  /// :param session: The session to use.
  /// :param details: :ref:`unspent-outputs-request` detailing the unspent transaction outputs to
  /// |    compute the balance from.
  /// :param call: Destination for the resulting GA_auth_handler to complete the action.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_get_balance(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_get_balance(
      session,
      details,
      call,
    );
  }

  late final _GA_get_balancePtr =
      _lookup<ffi.NativeFunction<NativeGA_get_balance>>('GA_get_balance');
  late final _GA_get_balance =
      _GA_get_balancePtr.asFunction<DartGA_get_balance>();

  /// Get the list of allowed currencies for all available pricing sources.
  ///
  /// :param session: The session to use.
  /// :param currencies: The returned list of :ref:`currencies`.
  /// |     Returned GA_json should be freed using `GA_destroy_json`.
  int GA_get_available_currencies(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Pointer<GA_json>> currencies,
  ) {
    return _GA_get_available_currencies(
      session,
      currencies,
    );
  }

  late final _GA_get_available_currenciesPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_available_currencies>>(
          'GA_get_available_currencies');
  late final _GA_get_available_currencies = _GA_get_available_currenciesPtr
      .asFunction<DartGA_get_available_currencies>();

  /// Convert Fiat to BTC and vice-versa.
  ///
  /// :param session: The session to use.
  /// :param value_details: :ref:`convert-amount` giving the value to convert.
  /// :param output: Destination for the converted values :ref:`amount-data`.
  /// |     Returned GA_json should be freed using `GA_destroy_json`.
  int GA_convert_amount(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> value_details,
    ffi.Pointer<ffi.Pointer<GA_json>> output,
  ) {
    return _GA_convert_amount(
      session,
      value_details,
      output,
    );
  }

  late final _GA_convert_amountPtr =
      _lookup<ffi.NativeFunction<NativeGA_convert_amount>>('GA_convert_amount');
  late final _GA_convert_amount =
      _GA_convert_amountPtr.asFunction<DartGA_convert_amount>();

  /// Encrypt json with server provided key protected by a PIN.
  ///
  /// :param session: The session to use.
  /// :param details: The :ref:`encrypt-with-pin-details` to encrypt.
  /// :param call: Destination for the resulting GA_auth_handler to complete the action.
  /// |     The call handlers result is :ref:`encrypt-with-pin-result` which the caller should persist.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_encrypt_with_pin(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_encrypt_with_pin(
      session,
      details,
      call,
    );
  }

  late final _GA_encrypt_with_pinPtr =
      _lookup<ffi.NativeFunction<NativeGA_encrypt_with_pin>>(
          'GA_encrypt_with_pin');
  late final _GA_encrypt_with_pin =
      _GA_encrypt_with_pinPtr.asFunction<DartGA_encrypt_with_pin>();

  /// Disable all PIN logins previously set.
  ///
  /// After calling this method, the user will not be able to login with PIN
  /// | from any device that was previously enabled using `GA_encrypt_with_pin`.
  ///
  /// :param session: The session to use.
  int GA_disable_all_pin_logins(
    ffi.Pointer<GA_session> session,
  ) {
    return _GA_disable_all_pin_logins(
      session,
    );
  }

  late final _GA_disable_all_pin_loginsPtr =
      _lookup<ffi.NativeFunction<NativeGA_disable_all_pin_logins>>(
          'GA_disable_all_pin_logins');
  late final _GA_disable_all_pin_logins =
      _GA_disable_all_pin_loginsPtr.asFunction<DartGA_disable_all_pin_logins>();

  /// Construct a transaction.
  ///
  /// :param session: The session to use.
  /// :param transaction_details: The :ref:`create-tx-details` for constructing.
  /// :param call: Destination for the resulting GA_auth_handler to complete the action.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_create_transaction(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> transaction_details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_create_transaction(
      session,
      transaction_details,
      call,
    );
  }

  late final _GA_create_transactionPtr =
      _lookup<ffi.NativeFunction<NativeGA_create_transaction>>(
          'GA_create_transaction');
  late final _GA_create_transaction =
      _GA_create_transactionPtr.asFunction<DartGA_create_transaction>();

  /// Sign the user's inputs to a transaction.
  ///
  /// :param session: The session to use.
  /// :param transaction_details: The :ref:`sign-tx-details` for signing, previously returned from GA_create_transaction.
  /// :param call: Destination for the resulting GA_auth_handler to perform the signing.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_sign_transaction(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> transaction_details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_sign_transaction(
      session,
      transaction_details,
      call,
    );
  }

  late final _GA_sign_transactionPtr =
      _lookup<ffi.NativeFunction<NativeGA_sign_transaction>>(
          'GA_sign_transaction');
  late final _GA_sign_transaction =
      _GA_sign_transactionPtr.asFunction<DartGA_sign_transaction>();

  /// Sign one or more of a user's inputs in a PSBT or PSET.
  ///
  /// :param session: The session to use.
  /// :param details: The :ref:`sign-psbt-details` for signing.
  /// :param call: Destination for the resulting GA_auth_handler to perform the signing.
  /// |     The call handlers result is :ref:`sign-psbt-result`.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  ///
  /// .. note:: EXPERIMENTAL warning: this call may be changed in future releases.
  int GA_psbt_sign(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_psbt_sign(
      session,
      details,
      call,
    );
  }

  late final _GA_psbt_signPtr =
      _lookup<ffi.NativeFunction<NativeGA_psbt_sign>>('GA_psbt_sign');
  late final _GA_psbt_sign = _GA_psbt_signPtr.asFunction<DartGA_psbt_sign>();
